samples/_failures_safe/1761626895_598d11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbaadc18.c: In function ‘print_errors’:
./samples/SAFE/__tmp_cbaadc18.c:130:9: error: expected expression at end of input
  130 |         if (strcmp(analyzer->entries[i].level, "ERROR") == 0)
      |         ^~
./samples/SAFE/__tmp_cbaadc18.c:130:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cbaadc18.c:130:9: error: expected declaration or statement at end of input
